# audio_interface

./: README.md
audio_bringup/: CMakeLists.txt  package.xml
audio_bringup/config/: config_aldebaran_nao.json  config_pc.json
audio_bringup/launch/: bringup_aldebaran_nao.launch  bringup_pc.launch
audio_core/: CMakeLists.txt  package.xml
audio_core/src/: InterfaceInput.cpp  InterfaceInput.h  InterfaceOutput.cpp  InterfaceOutput.h  InterfaceOutputElement.cpp  InterfaceOutputElement.h  InterfaceOutputManager.cpp  InterfaceOutputManager.h  debug.h  main.cpp
audio_core/srv/: create.srv  getBufferTime.srv  read.srv  remove.srv  stop.srv  write.srv
audio_msg/: CMakeLists.txt  package.xml
audio_msg/msg/: AudioBuffer.msg  AudioControl.msg  AudioStatus.msg  AudioVolume.msg
test/test_audio_generator/: CMakeLists.txt  package.xml
test/test_audio_generator/src/: main.cpp
test/test_audio_recorder/: CMakeLists.txt  package.xml
test/test_audio_recorder/src/: main.cpp
