<package>
	<name>audio_bringup</name>
	<version>0.0.2</version>
	<description>Generic Audio bringup</description>
	<maintainer email="yui.heero@gmail.com">Edouard DUPIN</maintainer>
	<license>Apache-2.0</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<run_depend>rospy</run_depend>
	<run_depend>audio_core</run_depend>
</package>