<?xml version="1.0"?>
<package>
	<name>audio_msg</name>
	<version>1.0.0</version>
	<description>Generic Audio messages</description>
	<maintainer email="yui.heero@gmail.com">Edouard DUPIN</maintainer>
	<license>Apache-2.0</license>
	
	<build_depend>message_generation</build_depend>
	
	<run_depend>message_runtime</run_depend>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
</package>